hello-kubernetes/hello1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello1-deployment
spec:
  replicas : 3
  selector:
      matchLabels:
        app: hello1
  template:
      metadata:
        name: hello1-pods
        labels: 
            app: hello1
      spec:
          containers:
              - name : hello1
                image: lvlal2iko/hello1:v1
                #imagePullPolicy: Never
---
apiVersion: v1
kind : Service
metadata:
    name: hello1-service
spec:
    type: ClusterIP
    selector:
      app: hello1
    ports:
      - port: 80
        targetPort: 8000

---
apiVersion: v1
kind : Service
metadata:
    name: hello1-service-nodeport
spec:
    type: NodePort
    selector:
      app: hello1
    ports:
      - port: 80
        targetPort: 8000
        nodePort: 30001
