hello-kubernetes/hello2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello2-deployment
spec:
  replicas : 3
  selector:
      matchLabels:
        app: hello2
  template:
      metadata:
        name: hello2-pods
        labels: 
            app: hello2
      spec:
          containers:
              - name : hello2
                image: lvlal2iko/hello2:v1
                #imagePullPolicy: Never
---
apiVersion: v1
kind : Service
metadata:
    name: hello2-service
spec:
    type: ClusterIP
    selector:
      app: hello2
    ports:
      - port: 80
        targetPort: 8000
---
apiVersion: v1
kind : Service
metadata:
    name: hello2-service-nodeport
spec:
    type: NodePort
    selector:
      app: hello2
    ports:
      - port: 80
        targetPort: 8000
        nodePort: 30002
