hello-kubernetes/hello-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /hello1
            pathType: Prefix
            backend:
              service:
                name: hello1-service
                port:
                  number: 80
          - path: /hello2
            pathType: Prefix
            backend:
              service:
                name: hello2-service
                port:
                  number: 80
